--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,19 +1,38 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+@section Scripts {
+    <script type="text/javascript">
+        function AddToCartOther(itemId) {
 
+            $.ajax({
+                method: "POST",
+                url: "/Home/CartAdd",
+                data: { ItemId: itemId }
+            })
+            //todo add pop up or something to let the user know the item was added sccessfully
+            event.preventDefault();
+        }
+        function cartCountUpdate() {
+            console.log("CART COUNT")
+            
+            $('#cartCount').load(document.URL + ' #cartCount');
+            event.preventDefault();
+        }
+    </script>
+}
 <div class="text-center">
     <h1 class="display-1" style="color: #DEC20B; font-weight: bold;">Pizza Bros</h1>
     <p style="color: #DEC20B; font-weight: bold;">Authentic pizza since 1961!</p>
 </div>
 <div>
     <center>
-        <img src="~/images/CovidProtocol.jpg" style="margin:15px" class="text-center" alt="Covid Protocol"/>
+        <img src="~/images/CovidProtocol.jpg" style="margin:15px" class="text-center" alt="Covid Protocol" />
     </center>
 </div>
 <div id="TopPicksCarousel" class="carousel slide" data-ride="carousel" style="height:500px">
 
-    
+
     <div class="carousel-inner">
         <a class="carousel-item active" href="Menu" style="text-decoration:none">
             <div class="d-flex">
@@ -26,13 +45,13 @@
                     <p>Made with fresh Pepperoni slices and our classic Mozzarella Cheese.</p>
                 </div>
             </div>
-            
+
         </a>
 
 
         <a class="carousel-item" href="Menu" style="text-decoration:none">
             <div class="d-flex">
-                <div class="carousel-item-left flex-row p-2" >
+                <div class="carousel-item-left flex-row p-2">
                     <!--https://images.unsplash.com/photo-1506354666786-959d6d497f1a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1170&q=80-->
                     <img class="fav-items-image d-block w-100" src="~/images/AllDressedImage.jpg" alt="AllDressed">
                 </div>
@@ -89,17 +108,17 @@
         <img src="~/images/2P2D1F.jpg" style="height:300px; width:400px" />
         <p class="deal-item-text my-0">Deal 1: 2 Medium Pepperoni Pizzas, 2 Cans of Pepsi and fries for $31.50. SAVE 10$!!!</p>
     </a>
-    <button class="btn btn-primary" type="button">Add To Cart</button>
+    <button class="btn btn-primary" type="button" onclick="AddToCartOther(29); cartCountUpdate()">Add To Cart</button>
     <!--https://cdn.restomenu.com/web/img/section/3102/c3a6874cfb8426555bf21b5dccf5ae5f.jpg-->
     <a class="deal-item" href="#SingleDeal" style="text-decoration: none;">
         <img src="~/images/1P1D1F.jpg" style="height:300px; width:400px" />
         <p class="deal-item-text my-0">Deal 2: 1 Medium Pepperoni Pizza, 1 Can of Pepsi and fries for $17.50. Save 5$!!!</p>
     </a>
-    <button class="btn btn-primary" type="button">Add To Cart</button>
+    <button class="btn btn-primary" type="button" onclick="AddToCartOther(30); cartCountUpdate()">Add To Cart</button>
 </div>
 
 <style>
-    .fav-items-image{
+    .fav-items-image {
         display: block;
         max-width: 100%;
         max-height: 500px;
@@ -107,21 +126,25 @@
         height: auto;
         padding-left: 25%;
     }
-    .deal-item{
-        display:flex;
+
+    .deal-item {
+        display: flex;
         max-width: 100%;
         max-height: 300px;
         width: auto;
         height: auto;
     }
+
     .carousel-item-right, h4 {
         color: #DEC20B;
         font-weight: bold;
     }
+
     .offers-deals, a.deal-item {
         color: #DEC20B;
         font-weight: bold;
     }
+
     .carousel-item-right h4 {
         font-size: 40px;
     }
@@ -133,5 +156,4 @@
     .carousel-item-right {
         width: 325px;
     }
-    
 </style>
