css fixed and image url added

--- a/Views/Home/CheckoutPage.cshtml
+++ b/Views/Home/CheckoutPage.cshtml
@@ -241,7 +241,7 @@
         height: fit-content;
     }
 
-    .billing {
+    .billing, .delivery {
         grid-column-start: 1;
         grid-column-end: span 2;
     }
