--- a/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -30,3 +30,10 @@
     }
     <li class="nav-item"><a class="nav-link @ManageNavPages.PersonalDataNavClass(ViewContext)" id="personal-data" asp-page="./PersonalData">Personal data</a></li>
 </ul>
+
+<style>
+    #profile, #email, #address, #change-password, #personal-data {
+        color: #DEC20B;
+        font-weight: bold;
+    }
+</style>
