--- a/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -27,3 +27,10 @@
 @section Scripts {
     @RenderSection("Scripts", required: false)
 }
+
+<style>
+    h2, h4 {
+        color: #DEC20B;
+        font-weight: bold;
+    }
+</style>
