--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -103,18 +103,19 @@
 
 <div class="offers-deals">
     <h4>DEALS</h4>
-    <!--https://cdn.restomenu.com/web/img/section/1534/ffc928f085699816f261d5a88f14e2e3.jpg-->
-    <a class="deal-item" href="#DoubleDeal" style="text-decoration: none;">
-        <img src="~/images/2P2D1F.jpg" style="height:300px; width:400px" />
-        <p class="deal-item-text my-0">Deal 1: 2 Medium Pepperoni Pizzas, 2 Cans of Pepsi and fries for $31.50. SAVE 10$!!!</p>
-    </a>
-    <button class="btn btn-primary" type="button" onclick="AddToCartOther(29); cartCountUpdate()">Add To Cart</button>
     <!--https://cdn.restomenu.com/web/img/section/3102/c3a6874cfb8426555bf21b5dccf5ae5f.jpg-->
     <a class="deal-item" href="#SingleDeal" style="text-decoration: none;">
         <img src="~/images/1P1D1F.jpg" style="height:300px; width:400px" />
-        <p class="deal-item-text my-0">Deal 2: 1 Medium Pepperoni Pizza, 1 Can of Pepsi and fries for $17.50. Save 5$!!!</p>
+        <p class="deal-item-text my-0">Special 1: 1 Medium Pepperoni Pizza, 1 Can of Pepsi and fries for $17.50. Save 5$!!!</p>
     </a>
     <button class="btn btn-primary" type="button" onclick="AddToCartOther(30); cartCountUpdate()">Add To Cart</button>
+    <!--https://cdn.restomenu.com/web/img/section/1534/ffc928f085699816f261d5a88f14e2e3.jpg-->
+    <a class="deal-item" href="#DoubleDeal" style="text-decoration: none;">
+        <img src="~/images/2P2D1F.jpg" style="height:300px; width:400px" />
+        <p class="deal-item-text my-0">Special 2: 2 Medium Pepperoni Pizzas, 2 Cans of Pepsi and fries for $31.50. SAVE 10$!!!</p>
+    </a>
+    <button class="btn btn-primary" type="button" onclick="AddToCartOther(29); cartCountUpdate()">Add To Cart</button>
+
 </div>
 
 <style>
