--- a/Views/Home/OrderConfirmation.cshtml
+++ b/Views/Home/OrderConfirmation.cshtml
@@ -58,3 +58,9 @@
 <div>
     <a asp-action="Index" class = "btn btn-primary">Back to home page</a>
 </div>
+<style>
+    h1, h4, dd,dt {
+        color: #DEC20B;
+        font-weight: bold;
+    }
+</style>
