price displayed in 2 decimal places on cart now

--- a/Views/Home/Cart.cshtml
+++ b/Views/Home/Cart.cshtml
@@ -75,7 +75,7 @@ else
 
                     </td>
                     <td>
-                        <p>$@((item.MenuItem.Price*item.Quantity))</p>
+                        <p>@((item.MenuItem.Price*item.Quantity).ToString("c"))</p>
                     </td>
                     <td>
                         @using (Html.BeginForm("CartRemove", "Home", new { ItemId = item.MenuItem.Id }, FormMethod.Post))
