Updated footer depending on role
Now header and footer navigation links match for all roles
Cooks and deliverers cannot see deals now

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,6 +1,9 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
 @section Scripts {
     <script type="text/javascript">
         function AddToCartOther(itemId) {
@@ -15,7 +18,7 @@
         }
         function cartCountUpdate() {
             console.log("CART COUNT")
-            
+
             $('#cartCount').load(document.URL + ' #cartCount');
             event.preventDefault();
         }
@@ -32,61 +35,58 @@
 </div>
 <div id="TopPicksCarousel" class="carousel slide" data-ride="carousel" style="height:500px">
 
-
     <div class="carousel-inner">
-        <a class="carousel-item active" href="Menu" style="text-decoration:none">
-            <div class="d-flex">
-                <div class="carousel-item-left flex-row p-2">
-                    <!--https://images.unsplash.com/photo-1564128442383-9201fcc740eb?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=931&q=80-->
-                    <img class="fav-items-image d-block w-100" src="~/images/PepperoniImage.jpg" alt="Pepperoni">
+            <a class="carousel-item active" href="Menu" style="text-decoration:none">
+                <div class="d-flex">
+                    <div class="carousel-item-left flex-row p-2">
+                        <!--https://images.unsplash.com/photo-1564128442383-9201fcc740eb?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=931&q=80-->
+                        <img class="fav-items-image d-block w-100" src="~/images/PepperoniImage.jpg" alt="Pepperoni">
+                    </div>
+                    <div class="carousel-item-right flex-row p-2">
+                        <h4>Pepperoni</h4>
+                        <p>Made with fresh Pepperoni slices and our classic Mozzarella Cheese.</p>
+                    </div>
                 </div>
-                <div class="carousel-item-right flex-row p-2">
-                    <h4>Pepperoni</h4>
-                    <p>Made with fresh Pepperoni slices and our classic Mozzarella Cheese.</p>
-                </div>
-            </div>
+            </a>
 
-        </a>
+            <a class="carousel-item" href="Menu" style="text-decoration:none">
+                <div class="d-flex">
+                    <div class="carousel-item-left flex-row p-2">
+                        <!--https://images.unsplash.com/photo-1506354666786-959d6d497f1a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1170&q=80-->
+                        <img class="fav-items-image d-block w-100" src="~/images/AllDressedImage.jpg" alt="AllDressed">
+                    </div>
+                    <div class="carousel-item-right flex-row p-2">
+                        <h4>All Dressed</h4>
+                        <p>Made with fresh Pepperoni slices, fresh Vegetables and our classic Mozzarella Cheese.</p>
+                    </div>
+                </div>
+            </a>
 
+            <a class="carousel-item" href="Menu" style="text-decoration:none">
+                <div class="d-flex">
+                    <div class="carousel-item-left flex-row p-2">
+                        <!--https://kirbiecravings.com/flourless-cheese-crust-pizza/-->
+                        <img class="fav-items-image d-block w-100" src="~/images/CheeseImage.jpg" alt="Cheese">
+                    </div>
+                    <div class="carousel-item-right flex-row p-2">
+                        <h4>Cheese</h4>
+                        <p>Made with our classic Mozzarella Cheese.</p>
+                    </div>
+                </div>
+            </a>
 
-        <a class="carousel-item" href="Menu" style="text-decoration:none">
-            <div class="d-flex">
-                <div class="carousel-item-left flex-row p-2">
-                    <!--https://images.unsplash.com/photo-1506354666786-959d6d497f1a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1170&q=80-->
-                    <img class="fav-items-image d-block w-100" src="~/images/AllDressedImage.jpg" alt="AllDressed">
+            <a class="carousel-item" href="Menu" style="text-decoration:none">
+                <div class="d-flex">
+                    <div class="carousel-item-left flex-row p-2">
+                        <!--https://images.unsplash.com/photo-1574126154517-d1e0d89ef734?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1074&q=80-->
+                        <img class="fav-items-image d-block w-100" src="~/images/VegetarianImage.jpg" alt="Vegetarian">
+                    </div>
+                    <div class="carousel-item-right flex-row p-2">
+                        <h4>Vegetarian</h4>
+                        <p>Made with fresh Vegetables and our classic Mozzarella Cheese.</p>
+                    </div>
                 </div>
-                <div class="carousel-item-right flex-row p-2">
-                    <h4>All Dressed</h4>
-                    <p>Made with fresh Pepperoni slices, fresh Vegetables and our classic Mozzarella Cheese.</p>
-                </div>
-            </div>
-        </a>
-
-        <a class="carousel-item" href="Menu" style="text-decoration:none">
-            <div class="d-flex">
-                <div class="carousel-item-left flex-row p-2">
-                    <!--https://kirbiecravings.com/flourless-cheese-crust-pizza/-->
-                    <img class="fav-items-image d-block w-100" src="~/images/CheeseImage.jpg" alt="Cheese">
-                </div>
-                <div class="carousel-item-right flex-row p-2">
-                    <h4>Cheese</h4>
-                    <p>Made with our classic Mozzarella Cheese.</p>
-                </div>
-            </div>
-        </a>
-
-        <a class="carousel-item" href="Menu" style="text-decoration:none">
-            <div class="d-flex">
-                <div class="carousel-item-left flex-row p-2">
-                    <!--https://images.unsplash.com/photo-1574126154517-d1e0d89ef734?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1074&q=80-->
-                    <img class="fav-items-image d-block w-100" src="~/images/VegetarianImage.jpg" alt="Vegetarian">
-                </div>
-                <div class="carousel-item-right flex-row p-2">
-                    <h4>Vegetarian</h4>
-                    <p>Made with fresh Vegetables and our classic Mozzarella Cheese.</p>
-                </div>
-            </div>
-        </a>
+            </a>
     </div>
 
     <a class="carousel-control-prev" href="#TopPicksCarousel" role="button" data-slide="prev">
@@ -101,22 +101,28 @@
     </a>
 </div>
 
-<div class="offers-deals">
-    <h4>DEALS</h4>
-    <!--https://cdn.restomenu.com/web/img/section/3102/c3a6874cfb8426555bf21b5dccf5ae5f.jpg-->
-    <a class="deal-item" href="#SingleDeal" style="text-decoration: none;">
-        <img src="~/images/1P1D1F.jpg" style="height:300px; width:400px" />
-        <p class="deal-item-text my-0">Special 1: 1 Medium Pepperoni Pizza, 1 Can of Pepsi and fries for $17.50. Save 5$!!!</p>
-    </a>
-    <button class="btn btn-primary" type="button" onclick="AddToCartOther(30); cartCountUpdate()">Add To Cart</button>
-    <!--https://cdn.restomenu.com/web/img/section/1534/ffc928f085699816f261d5a88f14e2e3.jpg-->
-    <a class="deal-item" href="#DoubleDeal" style="text-decoration: none;">
-        <img src="~/images/2P2D1F.jpg" style="height:300px; width:400px" />
-        <p class="deal-item-text my-0">Special 2: 2 Medium Pepperoni Pizzas, 2 Cans of Pepsi and fries for $31.50. SAVE 10$!!!</p>
-    </a>
-    <button class="btn btn-primary" type="button" onclick="AddToCartOther(29); cartCountUpdate()">Add To Cart</button>
+@if (SignInManager.IsSignedIn(User) && (UserManager.GetRolesAsync(UserManager.GetUserAsync(User).Result).Result.Contains("Deliverer") || UserManager.GetRolesAsync(UserManager.GetUserAsync(User).Result).Result.Contains("Cook")))
+{
 
-</div>
+}
+else
+{
+    <div class="offers-deals">
+        <h4>DEALS</h4>
+        <!--https://cdn.restomenu.com/web/img/section/3102/c3a6874cfb8426555bf21b5dccf5ae5f.jpg-->
+        <a class="deal-item" href="#SingleDeal" style="text-decoration: none;">
+            <img src="~/images/1P1D1F.jpg" style="height:300px; width:400px" />
+            <p class="deal-item-text my-0">Special 1: 1 Medium Pepperoni Pizza, 1 Can of Pepsi and fries for $17.50. Save 5$!!!</p>
+        </a>
+        <button class="btn btn-primary" type="button" onclick="AddToCartOther(30); cartCountUpdate()">Add To Cart</button>
+        <!--https://cdn.restomenu.com/web/img/section/1534/ffc928f085699816f261d5a88f14e2e3.jpg-->
+        <a class="deal-item" href="#DoubleDeal" style="text-decoration: none;">
+            <img src="~/images/2P2D1F.jpg" style="height:300px; width:400px" />
+            <p class="deal-item-text my-0">Special 2: 2 Medium Pepperoni Pizzas, 2 Cans of Pepsi and fries for $31.50. SAVE 10$!!!</p>
+        </a>
+        <button class="btn btn-primary" type="button" onclick="AddToCartOther(29); cartCountUpdate()">Add To Cart</button>
+    </div>
+}
 
 <style>
     .fav-items-image {
